manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jwtapp
  labels:
    app: jwtapp
spec:
  selector:
    matchLabels:
      app: jwtapp
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app:  jwtapp
    spec:
      # initContainers:
        # Init containers are exactly like regular containers, except:
          # - Init containers always run to completion.
          # - Each init container must complete successfully before the next one starts.
      containers:
      - name:  jwtapp
        image:  jwtapp:latest
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 100m
            memory: 100Mi
        livenessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 5
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /healthz
            port: 80
          initialDelaySeconds: 5
          timeoutSeconds: 2
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 10
        ports:
        - containerPort:  80
          name:  MYAPP
        volumeMounts:
        - name: localtime
          mountPath: /etc/localtime
      volumes:
        - name: localtime
          hostPath:
            path: /usr/share/zoneinfo/Asia/Shanghai
      restartPolicy: Always

# apiVersion : apps/v1
# kind: Deployment
# metadata:
#   name: jwtapp
#   labels:
#     app: jwtapp
# spec:
#   type: ClusterIP
#   replicas: 2
#   selector:
#     matchLabels:
#       app: jwtapp
#   ports:
#     - port:
#       targetPort: 9999
#   template:
#     metadata:
#       labels:
#         app: jwtapp 
#     spec:
#       containers:
#       - name: jwtapp 
#         image: rocketops.azurecr.io/custom-jwtapp
#         ports:
#         - containerPort: 9999
#         resources:
#           requests:
#             memory: "64Mi"
#             cpu: "250m"
#           limits:
#             memory: "128Mi"
#             cpu: "500m"
